--- a/javascript/package.json
+++ b/javascript/package.json
@@ -1,7 +1,7 @@
 {
   "name": "agentgatepay-sdk",
-  "version": "1.1.1",
-  "description": "Official JavaScript/TypeScript SDK for AgentGatePay - Payment gateway for AI agents",
+  "version": "1.1.2",
+  "description": "Official JavaScript/TypeScript SDK for AgentGatePay - Secure multi-chain cryptocurrency payment gateway for AI agents",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
