--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "agentgatepay-sdk"
 version = "1.1.2"
-description = "Official Python SDK for AgentGatePay - Secure multi-chain cryptocurrency payment gateway for AI agents"
+description = "Official Python SDK for AgentGatePay - Secure Payment Gateway for AI agents"
 readme = "README.md"
 requires-python = ">=3.8"
 license = {text = "MIT"}
