--- a/javascript/package.json
+++ b/javascript/package.json
@@ -29,7 +29,7 @@
     "agent-economy"
   ],
   "author": "AgentGatePay",
-  "license": "SEE LICENSE IN LICENSE",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/AgentGatePay/agentgatepay-sdks",
